--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="lion"
+    title="the lion"
+    />
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="lion king"
+    title="simba"
+    />
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="the lioness"
+    title="nala the lion"
+    />
   </body>
 </html>
